| Summary: | ASTERISK-26563: core: macOS devmode build fails: variable 'freeswap' set but not used | ||
| Reporter: | David M. Lee (dlee) | Labels: | |
| Date Opened: | 2016-11-07 11:45:20.000-0600 | Date Closed: | 2017-12-21 05:47:37.000-0600 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Core/General |
| Versions: | Frequency of Occurrence | ||
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | A [recent fix|https://github.com/asterisk/asterisk/commit/01884a7af637bd92511b2f85378afea1e42f76bf] to support the musl c-library creates a warning when building on macOS (or any other platform the does not {{HAVE_SYSINFO}}, nor {{HAVE_SWAPCTL}}, but does {{HAVE_SYSCTL}}).
{noformat} asterisk.c: In function 'handle_show_sysinfo': asterisk.c:790:11: error: variable 'freeswap' set but not used [-Werror=unused-but-set-variable] uint64_t freeswap = 0; ^~~~~~~~ {noformat} | ||
| Comments: | By: Friendly Automation (friendly-automation) 2017-12-21 05:47:39.100-0600 Change 7675 merged by Joshua Colp: core: Fix unused variable error in handle_show_sysinfo. [https://gerrit.asterisk.org/7675|https://gerrit.asterisk.org/7675] By: Friendly Automation (friendly-automation) 2017-12-21 05:47:56.508-0600 Change 7674 merged by Joshua Colp: core: Fix unused variable error in handle_show_sysinfo. [https://gerrit.asterisk.org/7674|https://gerrit.asterisk.org/7674] By: Friendly Automation (friendly-automation) 2017-12-21 05:52:31.682-0600 Change 7673 merged by Jenkins2: core: Fix unused variable error in handle_show_sysinfo. [https://gerrit.asterisk.org/7673|https://gerrit.asterisk.org/7673] By: Friendly Automation (friendly-automation) 2018-01-29 11:23:52.180-0600 Change 8071 merged by Jenkins2: core: Fix unused variable error in handle_show_sysinfo. [https://gerrit.asterisk.org/8071|https://gerrit.asterisk.org/8071] By: Friendly Automation (friendly-automation) 2018-01-29 11:39:20.737-0600 Change 8072 merged by Jenkins2: core: Fix unused variable error in handle_show_sysinfo. [https://gerrit.asterisk.org/8072|https://gerrit.asterisk.org/8072] By: Friendly Automation (friendly-automation) 2018-01-29 11:46:46.157-0600 Change 8070 merged by Jenkins2: core: Fix unused variable error in handle_show_sysinfo. [https://gerrit.asterisk.org/8070|https://gerrit.asterisk.org/8070] | ||