show_sysinfo: fix set but not used warnings

Some systems (I'm looking at you, macOS) have neither sysinfo nor
swapctl, so we don't have a method for getting their swap info. The
current implmentation just prints 0's for swap info, but also results in
warnings that fail dev builds.

I've made the existing ifdef's consistent, but I feel like the sysctl,
sysinfo and swapctl logic should be detangled. Unfortunately, how to
properly detangle them is a bit beyond me at the moment.

ASTERISK-26563 #close

Change-Id: I13bc273ac19a6580bef226b0b633bb40c0672ef2